# OLS

./: CMakeLists.txt
OFS-lib/: CMakeLists.txt  OFS_MpvLoader.cpp  OFS_Util.cpp  OFS_Util.h  OFS_VectorSet.h
OFS-lib/Funscript/: Funscript.cpp  Funscript.h  FunscriptAction.h  FunscriptHeatmap.cpp
OFS-lib/UI/: OFS_KeybindingSystem.cpp  ScriptPositionsOverlayMode.cpp
OFS-lib/event/: OFS_EventSystem.h
OFS-lib/gl/: OFS_Shader.cpp  OFS_Shader.h
OFS-lib/state/: OFS_StateManager.cpp  OFS_StateManager.h
OFS-lib/videoplayer/impl/: OFS_MpvVideoplayer.cpp
lib/: CMakeLists.txt
lib/sevfate/: CMakeLists.txt  lemon.c
lib/sevfate/tcode/: Common.hpp  LemonTemplate.cpp  LemonTemplate.hpp  Messages.hpp  Parser.yy  ParserDispatcher.cpp  ParserDispatcher.hpp  ParserDispatcherConn.cpp  ParserDispatcherPendSync.cpp  ParserDispatcherRegistry.cpp  ParserDispatcherRegistry.hpp  ParserDispatcherRequest.cpp  ParserDispatcherResponse.cpp  Tokenizer.l  Utils.hpp  meson.build
lib/sevfate/utils/: Class.hpp  Endianness.hpp  Filenames.cpp  Filenames.hpp  Flags.hpp  Trace.hpp  Z85.cpp  Z85.hpp  meson.build
localization/: gen_localization.cpp  localization.csv
src/: CMakeLists.txt  OFS_Project.cpp  OFS_Project.h  OpenFunscripter.cpp  OpenFunscripter.h
src/UI/: OFS_FunscriptMetadataEditor.cpp
src/UI/OFS_ETCode/: axis_control.cpp  axis_control.hpp  interactive.cpp  interactive.hpp  interactive_axis.cpp  interactive_prop.cpp  interactive_ui.cpp  logger.hpp  state.hpp
src/state/: OpenFunscripterState.cpp  OpenFunscripterState.h  SpecialFunctionsState.h
